# 1q-grid-qchem

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
docs/source/: conf.py
grid1q/: __init__.py  main.py  utils.py
grid1q/examples/operators/: plane_waves.ipynb
grid1q/examples/wavefunctions/: plane_waves.ipynb
grid1q/operators/: __init__.py  plane_wave.py
grid1q/utils/fourier_methods/: __init__.py  fourier.py
grid1q/wavefunctions/: __init__.py  plane_wave.py
tests/: test_main.py  test_utils.py
