[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid1q"
version = "0.0.1"
description = "A python library"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Nathan Fitzpatrick", email = "nathan.fitzpatrick@quantinumm.com" }]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Repository = "https://github.com/CQCL/pytemplate.git"

# See https://microsoft.github.io/pyright/#/getting-started
[tool.pyright]
include = ["grid1q","tests"]
ignore = ["**/*.ipynb"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
